# esp32-gs

./: .gitignore  CMakeLists.txt  backup  partitions.csv  sdkconfig  sdkconfig.old  sdkconfigS
components/lvgl/: lv_conf.h
main/: CMakeLists.txt  HX711.h  blink_example_main.c  gpio_button.c  gpio_button.h  hongwai.h  idf_component.yml  st7789.c
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c
main/ui/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_small_label.c
main/ui/fonts/: ui_font_iconeco30.c  ui_font_iconfont22.c  ui_font_uavfont.c
main/ui/images/: ui_img_70400119.c  ui_img_logo1_png.c  ui_img_uav_png.c
main/ui/screens/: ui_Splash.c  ui_Weather.c
